public/stylesheets/main.css
/* landing page image */
#landing-img{
  width: 100%;
}
#landing-container{
  padding: 0;
}

/* video pages */
#jumbotron-container{
  padding-left:0;
  padding-right:0;
}
#margin-jumbotron{
  height:100px;
}
/* hover over episode */
.episode-container{
  border: 1px solid white;
}
.episode-container:hover{
  border: 1px solid black;
}

/* show pages */
#video-container{
  height: 50vh;
  padding:0;
}
/* navbar */
.navbar{
  margin-top: 0;
  box-shadow: 0 0 50px 20px rgba(0,0,0,.3);
  width:100%;
}
.navbar-brand{
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
}
.nav-item{
  padding-left:10px;
  padding-right:10px;
  font-size: 1.2rem;
}
.nav-item:hover{
  color: black;
  display: block;
}


/* episodes page */
.episode-row{
  padding: 2rem 2rem;
}
.description{
  border:0;
  padding:1rem 1rem 1rem 2rem;
  font-family: 'Open Sans', sans-serif;
}
.description h2{
  margin-bottom:0.5rem;
  font-weight:bold;
}
.description p{
  margin:0.2rem;
}
img{
  width:100%;
  padding:0;
}
.image-box{
  padding:0;
}
.episode-link{
  color: black;
}
.episode-link:hover{
  color:black;
}
.nav-link{
  color:black;
}
.nav-link:hover{
  color:black;
}

/* login page */
.login{
  padding:3rem;
  margin-top: 5rem;
  box-shadow: 0 0 50px 20px rgba(0,0,0,.3);
  font-family: 'Open Sans', sans-serif;
  font-weight:700;
}
.info-section{
  padding:2rem;
}
.submit-button{
  margin-top:10rem;
  border:solid black 1px;
}
.login-text{
  font-family: 'Open Sans', sans-serif;
  font-weight:bold;
}
.white{
  background-color:white;
}

